[Core] Replacing SegmentScope with Arena